<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BlinkIn_register"
    android:background="@color/signupColor"
    android:orientation="vertical">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical" >
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:src="@drawable/logoo"
                android:layout_marginTop="30dp"
                />


            <TextView
                android:id="@+id/login_title"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/makereg"
                android:textColor="#fff"
                android:textSize="30dp"
                android:textStyle="bold"
                android:layout_marginTop="30dp"
                />
            <LinearLayout
                android:id="@+id/LayoutInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:elevation="10dp"
                android:orientation="vertical"
                android:padding="20dp"
                android:background="@color/white"
                android:layout_marginTop="30dp"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nam"
                    android:textColor="@color/signupColor"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="20dp"
                    android:maxLength="20"
                    android:hint="eg abc"
                    android:textColor="@color/black"
                    android:backgroundTint="@color/black"
                    android:textColorHint="@color/black"
                    android:inputType="textPersonName" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/empid"
                    android:textColor="@color/signupColor"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/empi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="20dp"
                    android:hint="eg 167270"
                    android:maxLength="20"
                    android:textColor="@color/black"
                    android:backgroundTint="@color/black"
                    android:textColorHint="@color/black"
                    android:inputType="number" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="Enter Email"
                    android:textColor="@color/signupColor"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/mail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="20dp"
                    android:hint="eg abc@xyz.com"
                    android:maxLength="20"
                    android:textColor="@color/black"
                    android:backgroundTint="@color/black"
                    android:textColorHint="@color/black"
                    android:inputType="textEmailAddress" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="Enter Password"
                    android:textColor="@color/signupColor"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="20dp"
                    android:inputType="textPassword"
                    android:maxLength="20"
                    android:hint="eg xyz123"
                    android:textColor="@color/black"
                    android:backgroundTint="@color/black"
                    android:textColorHint="@color/black"
                    />

                <Button
                    android:id="@+id/bttn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:elevation="5dp"
                    android:text="@string/login"
                    android:textAllCaps="false"
                    android:background="@drawable/round_button"
                    android:clickable="true"
                    android:focusable="true"
                    android:textColor="#fff"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    />
                <Button
                    android:id="@+id/can"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/canclepas"
                    android:textAllCaps="false"
                    android:elevation="10dp"
                    android:background="@drawable/roundbutton2"
                    android:clickable="true"
                    android:focusable="true"
                    android:textColor="#fff"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    />



            </LinearLayout>
        </LinearLayout>
    </ScrollView>


</LinearLayout>