<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/signupColor"
    android:gravity="center"
    android:id="@+id/mark_my_attendance_layout"
    tools:context=".Mark_my_attendance">
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView"
        >


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">
                <androidx.cardview.widget.CardView
                    android:layout_width="150dp"
                    android:layout_height="165dp"
                    android:layout_margin="10dp"
                    app:cardCornerRadius="25dp"
                    android:id="@+id/marktheatten"


                    >
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:gravity="center"
                        >
                        <ImageView
                            android:layout_width="70dp"
                            android:layout_height="70dp"
                            android:src="@drawable/appointmenthistory"
                            android:background="@drawable/background6"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:layout_marginTop="10dp"
                            android:gravity="center"
                            android:text="@string/Markmyattendance" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:layout_width="150dp"
                    android:layout_height="165dp"
                    android:layout_margin="10dp"
                    app:cardCornerRadius="25dp"
                    android:id="@+id/applytheleave"
                    >
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:gravity="center"
                        >
                        <ImageView
                            android:layout_width="70dp"
                            android:layout_height="70dp"
                            android:src="@drawable/upcominghistory"
                            android:background="@drawable/background3"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:layout_marginTop="10dp"
                            android:text="@string/Applyforleave" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">
                <androidx.cardview.widget.CardView
                    android:layout_width="150dp"
                    android:layout_height="165dp"
                    android:layout_margin="10dp"
                    app:cardCornerRadius="25dp"
                    android:id="@+id/displaytheswipe"
                    >
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:gravity="center">
                        <ImageView
                            android:layout_width="70dp"
                            android:layout_height="70dp"
                            android:background="@drawable/background5"
                            android:src="@drawable/update"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:layout_marginTop="10dp"
                            android:text="@string/Displayswipes"
                            android:gravity="center"

                            />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>



            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>